--- a/compose.yaml
+++ b/compose.yaml
@@ -19,7 +19,7 @@ services:
     environment:
       APP_ENV: production
       ALCHEMICAL_DATABASE_URL: postgresql://postgres:passwd@db:5432/db
-      NEXT_URL: http://diemsondemand.com
+      NEXT_URL: ${NEXT_URL:-https://diemsondemand.com}
     env_file:
       - .env
     depends_on:
